errorlogs/1516538907086-Bhaskara_v1.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
135 INFO: PyInstaller: 3.3.1
135 INFO: Python: 3.4.4
135 INFO: Platform: Windows-XP-5.1.2600-SP3
136 INFO: wrote Z:\p2e\Bhaskara_v1.spec
142 INFO: UPX is not available.
143 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
150 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516538907086', 'Z:\\p2e']
150 INFO: checking Analysis
151 INFO: Building Analysis because out00-Analysis.toc is non existent
151 INFO: Initializing module dependency graph...
159 INFO: Initializing module graph hooks...
162 INFO: Analyzing base_library.zip ...
6441 INFO: Processing pre-find module path hook   distutils
9659 INFO: running Analysis out00-Analysis.toc
10143 INFO: Caching module hooks...
10155 INFO: Analyzing Z:\p2e\workingdir\1516538907086\Bhaskara_v1.py

Syntax error in Z:\p2e\workingdir\1516538907086\Bhaskara_v1.py
  File "Z:\p2e\workingdir\1516538907086\Bhaskara_v1.py", line 146
     lb_raiz1 = Label(janela, text=f'x1 = {raiz1:.8f}', width=30, bg='white')
                                                     ^
 SyntaxError: invalid syntax

